--- a/course.yml
+++ b/course.yml
@@ -10,33 +10,64 @@ letter_grades:
   "D": 0.50
   "E": 0.00
 
+student_id: "ASU Student ID (10-digit number)"
+
 start_date: "2025-08-14T00:00:00-07:00"
 
 assessments:
-  - type: due
-    id: access-control
-    date: "2025-10-19T23:59:59-07:00"
-    weight: 1
-    late_penalty: 0.5
-    extensions:
-    
+
+- type: due
+  id: assembly-crash-course
+  date: "2025-10-19T23:59:59-07:00"
+  weight: 1
+  late_penalty: 0.5
+  extensions:
+
+- type: due
+  id: reverse-engineering
+  date: "2025-10-19T23:59:59-07:00"
+  weight: 1
+  late_penalty: 0.5
+  extensions:
+  
+- type: due
+  id: intercepting-communication
+  date: "2025-10-19T23:59:59-07:00"
+  weight: 1
+  late_penalty: 0.5
+  extensions:
+
+- type: due
+  id: access-control
+  date: "2025-10-19T23:59:59-07:00"
+  weight: 1
+  late_penalty: 0.5
+  extensions:
+
+- type: due
+  id: web-security
+  date: "2025-10-19T23:59:59-07:00"
+  weight: 1
+  late_penalty: 0.5
+  extensions:
+
 syllabus: |
-  # CSE 543 - Information Assurance Security - Fall 2025
-  
-  ## Zoom Support Session
-  **When**: Monday 11:00 AM - 12:00 PM  
-  **Where**: [Zoom Link](https://asu.zoom.us/j/86754876836?pwd=eneqxAUMHsrqSMDNuch8tXwU4ebrm1.1)
-  
-  
-  This course covers fundamental concepts in computer systems security through hands-on practice with the pwn.college platform.
-  
-  ## Modules
-  1. **Access Control** - 2%
-  2. **Web Security** - 2%
-  3. **Intercepting Communication** - 2%
-  4. **Assembly Crash Course** - 2%(extra credit)
-  5. **Reverse Engineering** - 2%(extra credit)
-    
-  ## Important Dates
-  - Course start: August 21, 2025
-  - All assessments due: October 19, 2025
+  # CSE 543 - Information Assurance Security - Fall 2025
+  
+  ## Zoom Support Session
+  **When**: Monday 11:00 AM - 12:00 PM  
+  **Where**: [Zoom Link](https://asu.zoom.us/j/86754876836?pwd=eneqxAUMHsrqSMDNuch8tXwU4ebrm1.1)
+  
+  
+  This course covers fundamental concepts in computer systems security through hands-on practice with the pwn.college platform.
+  
+  ## Modules
+  1. **Access Control** - 2%
+  2. **Web Security** - 2%
+  3. **Intercepting Communication** - 2%
+  4. **Assembly Crash Course** - 2%(extra credit)
+  5. **Reverse Engineering** - 2%(extra credit)
+    
+  ## Important Dates
+  - Course start: August 21, 2025
+  - All assessments due: October 19, 2025
