--- a/dojo.yml
+++ b/dojo.yml
@@ -1,7 +1,7 @@
-id: cse543-fall-2025
-name: "CSE 543 - Fall 2025"
+id: cse892-winter-2025
+name: "CSE 892 - Fall 2025"
 description: |
-  Arizona State University - CSE 543 - Fall 2025
+  Arizona State University - CSE 892 - Fall 2025
 
 type : course
 
